Set ID's for maven-assembly-plugin and set <appendAssemblyId>false</appendAssemblyId> in pom.xml

--- a/agents/josso-microsoft-agent/pom.xml
+++ b/agents/josso-microsoft-agent/pom.xml
@@ -301,6 +301,7 @@
                             </descriptors>
                             <finalName>${pom.artifactId}-${pom.version}</finalName>
                             <tarLongFileMode>gnu</tarLongFileMode>
+                            <appendAssemblyId>false</appendAssemblyId>
                         </configuration>
                     </execution>
                 </executions>
