--- a/examples/josso-partner-asp/pom.xml
+++ b/examples/josso-partner-asp/pom.xml
@@ -98,7 +98,7 @@
                             </descriptors>
 
                             <tarLongFileMode>gnu</tarLongFileMode>
-
+							<appendAssemblyId>false</appendAssemblyId>
                         </configuration>
                     </execution>
                 </executions>
