--- a/agents/josso-apache22-agent/pom.xml
+++ b/agents/josso-apache22-agent/pom.xml
@@ -56,6 +56,7 @@
                             </descriptors>
                             <finalName>${pom.artifactId}-${pom.version}</finalName>
                             <tarLongFileMode>gnu</tarLongFileMode>
+                            <appendAssemblyId>false</appendAssemblyId>
                         </configuration>
                     </execution>
                 </executions>
