--- a/agents/pom.xml
+++ b/agents/pom.xml
@@ -46,7 +46,7 @@
                 <module>josso-servlet-agent</module>
                 <module>josso-liferay5-agent</module>
                 <module>josso-liferay6-agent</module>
-                <module>josso-alfresco-agent</module>
+<!--                 <module>josso-alfresco-agent</module> -->
                 <module>josso-tomcat50-agent</module>
                 <module>josso-tomcat55-agent</module>
                 <module>josso-tomcat60-agent</module>
@@ -86,7 +86,7 @@
                 <module>josso-servlet-agent</module>
                 <module>josso-liferay5-agent</module>
                 <module>josso-liferay6-agent</module>
-                <module>josso-alfresco-agent</module>
+<!--                 <module>josso-alfresco-agent</module> -->
                 <module>josso-tomcat50-agent</module>
                 <module>josso-tomcat55-agent</module>
                 <module>josso-tomcat60-agent</module>
