--- a/distributions/josso/pom.xml
+++ b/distributions/josso/pom.xml
@@ -217,10 +217,10 @@
             <artifactId>josso-gatein-agent-authenticator</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.josso</groupId>
-            <artifactId>josso-alfresco-agent</artifactId>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.josso</groupId> -->
+<!--             <artifactId>josso-alfresco-agent</artifactId> -->
+<!--         </dependency> -->
 
         <dependency>
             <groupId>org.josso</groupId>
