Add Redhat GA Repo to retrieve the jacorb-idl/2.2.3-jonas-patch-20071018 dependency

--- a/pom.xml
+++ b/pom.xml
@@ -677,6 +677,12 @@
             <url>http://repository.jboss.com/maven2</url>
         </repository>
 
+        <!-- Redhat GA Repo -->
+        <repository>
+            <id>redhat-ga</id>
+            <url>https://maven.repository.redhat.com/ga/</url>
+        </repository>
+
         <!-- OPS4J -->
         <repository>
             <id>ops4j</id>
