Comment out the josso-wasce-agent (josso-wasce2-agent module) couse of missing dependencies

--- a/agents/pom.xml
+++ b/agents/pom.xml
@@ -68,7 +68,7 @@
                 <module>josso-phpBB-agent</module>
                 <module>josso-microsoft-agent</module>
                 <module>josso-apache22-agent</module>
-                <module>josso-wasce2-agent</module>
+<!--                 <module>josso-wasce2-agent</module> -->
                 <module>josso-jaspi-agent</module>
                 <module>josso-applet-agent</module>
                 <module>josso-gatein-agent</module>
@@ -103,7 +103,7 @@
                 <module>josso-phpBB-agent</module>
                 <module>josso-microsoft-agent</module>
                 <module>josso-apache22-agent</module>
-                <module>josso-wasce2-agent</module>
+<!--                 <module>josso-wasce2-agent</module> -->
                 <module>josso-jaspi-agent</module>
                 <module>josso-jboss5-agent</module>
                 <module>josso-applet-agent</module>
